[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "pyawx"
description = "A python client to talk to AWX instances."
readme = "README.md"
requires-python = ">3.8"
authors = [{ name = "Justin Palmer", email = "jpavlav@gmail.com" }]
version = "0.0.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
]
dependencies = ["httpx >= 0.25.0, < 1"]

[project.urls]
"Homepage" = "https://github.com/jpavlav/pyawx"
